Added background colors to the criminal cards so that all examples are not gray.

--- a/styles/elements/note.css
+++ b/styles/elements/note.css
@@ -57,7 +57,7 @@
     text-decoration: underline;
 }
 
-.toggleNoteButton {
+.removeNoteButton {
     bottom: 15px;
     display: inline-block;
     left: 10px;
