--- a/styles/elements/criminal.css
+++ b/styles/elements/criminal.css
@@ -30,3 +30,27 @@
     justify-content: space-between;
     margin: 5rem auto;
 }
+
+.red {
+    background-color: red;
+}
+
+.orange {
+    background-color: orange;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.green {
+    background-color: green;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.violet {
+    background-color: violet;
+}
