--- a/styles/elements/criminal.css
+++ b/styles/elements/criminal.css
@@ -28,7 +28,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 5rem auto;
+    margin: 0 auto;
 }
 
 #radioDivLabel {
@@ -63,7 +63,7 @@
     background-color: antiquewhite;
 }
 
-.choral {
+.coral {
     background-color: coral;
 }
 
@@ -129,4 +129,28 @@
 
 .skyblue {
     background-color: skyblue;
+}
+
+.colorKey {
+    margin-right: 2rem;
+    position: relative;
+}
+
+.colorKey p {
+    padding-left: 20px;
+}
+
+.colorBox {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    position: absolute;
+    left: 5px;
+    top: 5px;
+}
+
+#listKeyContainer {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5rem 10% 0 10%;
 }
