Refactored to be a bit more in line with the given live code examples and attempted to add thorough comments to CriminalsList.js, as it is the most intensive module.

--- a/styles/elements/filter.css
+++ b/styles/elements/filter.css
@@ -1,3 +1,10 @@
 #crimeSelect {
     text-transform: capitalize;
 }
+
+#noResultsAlert{
+    background-color: aliceblue;
+    border-radius: 25px;
+    margin: auto;
+    padding: 4rem;
+}
