--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import './elements/noteForm.css';
 @import './elements/witness.css';
 @import './elements/filter.css';
+@import './elements/facility.css';
 
 /* General Styling */
 .bold {
@@ -23,4 +24,8 @@
 
 .hidden {
     display: none;
+}
+
+#buttonContainer {
+    padding: 0 2rem;
 }
